# salesforce-bulk-python

./: .gitignore  README.md  requirements.txt  setup.cfg
.github/workflows/: build.yml  release.yml
src/salesforce_bulk_python/: bulk.py
tests/: test_bulk.py
