[metadata]
name = salesforce-bulk-python
version = 0.0.1
author = Mike Pieters
author_email = me@mikepieters.com
description = Package to communicate with Salesforce using their Bulk REST API v2.0.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mrpowerus/salesforce-bulk-python
project_urls =
    Bug Tracker = https://github.com/mrpowerus/salesforce-bulk-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    pyjwt
    requests
    asyncio
    cryptography

[options.packages.find]
where = src

[coverage:run]
omit =
    .venv/*
    tests/*
    conftest.py